--- a/composeApp/src/jsMain/resources/index.html
+++ b/composeApp/src/jsMain/resources/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BunuYesene</title>
-    <link type="text/css" rel="stylesheet" href="styles.css">
-    <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
-<script type="application/javascript" src="composeApp.js"></script>
+<div id="root"></div> -->
+<script src="composeApp.js"></script>
 </body>
 </html>
