--- a/composeApp/src/jsMain/resources/index.html
+++ b/composeApp/src/jsMain/resources/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BunuYesene</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RecipeApp-CMP</title>
+    <link type="text/css" rel="stylesheet" href="styles.css">
+    <script type="application/javascript" src="skiko.js"></script>
 </head>
 <body>
-<div id="root"></div> -->
-<script src="composeApp.js"></script>
+<script type="application/javascript" src="composeApp.js"></script>
 </body>
 </html>
